--- a/talkapp/templates/talkapp/user_create.html
+++ b/talkapp/templates/talkapp/user_create.html
@@ -8,7 +8,8 @@
 <div class="row">
   <div class="col-md-8 col-md-offset-2">
     <h1>登録</h1>
-    <from action="{% url 'talkapp:user_store' %}" method="post" enctype="multipart/form-data">
+    {% url 'talkapp:user_store' %}
+    <form action="{% url 'talkapp:user_store' %}" method="post" enctype="multipart/form-data">
       <div class="form-group">
         <label for="Name">名前</label>
         <input type="text" name="name" class="form-control" id="Name" placeholder="Name">
@@ -27,7 +28,7 @@
       </div>
       <button type="submit" class="btn btn-primary">登録</button>
       {% csrf_token %}
-    </from>
+    </form>
   </div>
 </div>
 {% endblock %}
