--- a/talkapp/templates/talkapp/post_create.html
+++ b/talkapp/templates/talkapp/post_create.html
@@ -8,14 +8,14 @@
 <div class="row">
   <div class="col-md-8 col-md-offset-2">
     <h1>メッセージ作成</h1>
-    <from action="{% url 'talkapp:post_store' %}" method="post">
+    <form action="{% url 'talkapp:post_store' %}" method="post">
       <div class="form-group">
         <label for="Message">メッセージ</label>
         <textarea class="form-control" name="message" id="Message" rows="5" placeholder="Your Post"></textarea>
       </div>
       <button type="submit" class="btn btn-primary">送信</button>
       {% csrf_token %}
-    </from>
+    </form>
   </div>
 </div>
 {% endblock %}
