--- a/talkapp/templates/talkapp/post_index.html
+++ b/talkapp/templates/talkapp/post_index.html
@@ -7,12 +7,12 @@
 {% block content %}
 <div class="row">
   <div class="col-md-8 col-md-offset-2 well">
-    <from action="talkapp:post_delete_all" method="post">
+    <form action="talkapp:post_delete_all" method="post">
       <div class="form-group">
         <button type="submit" class="btn btn-denger btn-xs pull-right">削除</button>
         {% csrf_token %}
       </div>
-    </from>
+    </form>
 
     {% for post in posts %}
     <div class="media">
