--- a/talkapp/templates/talkapp/post_index.html
+++ b/talkapp/templates/talkapp/post_index.html
@@ -7,7 +7,7 @@
 {% block content %}
 <div class="row">
   <div class="col-md-8 col-md-offset-2 well">
-    <form action="talkapp:post_delete_all" method="post">
+    <form action="{% url 'talkapp:post_delete_all' %}" method="post">
       <div class="form-group">
         <button type="submit" class="btn btn-denger btn-xs pull-right">削除</button>
         {% csrf_token %}
