--- a/talkapp/templates/talkapp/user_create.html
+++ b/talkapp/templates/talkapp/user_create.html
@@ -15,6 +15,7 @@
       </div>
       <div class="form-group">
         <label for="Email">メール</label>
+        <input type="text" name="email" style="visibility: hidden; top: -100px; left: -100px;" />
         <input type="text" name="email" class="form-control" id="Email" placeholder="Email">
       </div>
       <div class="form-group">
