--- a/talkapp/templates/talkapp/user_create.html
+++ b/talkapp/templates/talkapp/user_create.html
@@ -10,20 +10,20 @@
     <h1>登録</h1>
     <form action="{% url 'talkapp:user_store' %}" method="post" enctype="multipart/form-data">
       <div class="form-group">
-        <label for="Name">名前</label>
+        <label class="label-required-text" for="Name">名前</label>
         <input type="text" name="name" class="form-control" id="Name" placeholder="Name">
       </div>
       <div class="form-group">
-        <label for="Email">メール</label>
+        <label class="label-required-text" for="Email">メール</label>
         <input type="text" name="email" style="visibility: hidden; top: -100px; left: -100px;" />
         <input type="text" name="email" class="form-control" id="Email" placeholder="Email">
       </div>
       <div class="form-group">
-        <label for="Password">パスワード</label>
+        <label class="label-required-text" for="Password">パスワード</label>
         <input type="password" name="password" class="form-control" id="Password" placeholder="Password">
       </div>
       <div class="form-group">
-        <label for="ImageFile">プロフィール画像ファイル</label>
+        <label class="label-required-text" for="ImageFile">プロフィール画像ファイル</label>
         <input type="file" name="file" id="ImageFile">
       </div>
       <button type="submit" class="btn btn-primary">登録</button>
