--- a/talkapp/templates/talkapp/user_edit.html
+++ b/talkapp/templates/talkapp/user_edit.html
@@ -11,20 +11,24 @@
     <p><strong>修正する箇所のみ入力してください</strong></p>
     <form action="{% url 'talkapp:user_update' %}" method="post" enctype="multipart/form-data">
       <div class="form-group">
-        <label for="Name">名前</label>
+        <a class="label label-required">必須</a>
+        <label class="label-required-text" for="Name">名前</label>
         <input type="text" name="name" class="form-control" id="Name">
       </div>
       <div class="form-group">
-        <label for="Email">メール</label>
+        <a class="label label-required">必須</a>
+        <label class="label-required-text" for="Email">メール</label>
         <input type="text" name="email" style="visibility: hidden; top: -100px; left: -100px;" />
         <input type="text" name="email" class="form-control" id="Email">
       </div>
       <div class="form-group">
-        <label for="Password">パスワード</label>
+        <a class="label label-required">必須</a>
+        <label class="label-required-text" for="Password">パスワード</label>
         <input type="password" name="password" class="form-control" id="Password">
       </div>
       <div class="form-group">
-        <label for="ImageFile">新しいプロフィール画像ファイル</label>
+        <a class="label label-required">必須</a>
+        <label class="label-required-text" for="ImageFile">新しいプロフィール画像ファイル</label>
         <input type="file" name="file" id="ImageFile">
       </div>
       <button type="submit" class="btn btn-primary">登録</button>
