--- a/talkapp/templates/talkapp/getlogin.html
+++ b/talkapp/templates/talkapp/getlogin.html
@@ -11,6 +11,7 @@
     <form action="{% url 'talkapp:postlogin' %}" method="post">
       <div class="form-group">
         <label for="Email">メール</label>
+        <input type="text" name="email" style="visibility: hidden; top: -100px; left: -100px;" />
         <input type="text" name="email" class="form-control" id="Email" placeholder="Email">
       </div>
       <div class="form-group">
