--- a/talkapp/templates/talkapp/user_edit.html
+++ b/talkapp/templates/talkapp/user_edit.html
@@ -5,30 +5,31 @@
 {% endblock %}
 
 {% block content %}
+  {{ message_title }}{{ message }}
 <div class="row">
   <div class="col-md-8 col-md-offset-2">
     <h1>登録情報修正</h1>
     <p><strong>修正する箇所のみ入力してください</strong></p>
     <form action="{% url 'talkapp:user_update' %}" method="post" enctype="multipart/form-data">
       <div class="form-group">
-        <a class="label label-required">必須</a>
         <label class="label-required-text" for="Name">名前</label>
-        <input type="text" name="name" class="form-control" id="Name">
+        <input type="text" name="name" class="form-control" id="Name" value={{ username }}>
       </div>
       <div class="form-group">
-        <a class="label label-required">必須</a>
         <label class="label-required-text" for="Email">メール</label>
         <input type="text" name="email" style="visibility: hidden; top: -100px; left: -100px;" />
-        <input type="text" name="email" class="form-control" id="Email">
+        <input type="text" name="email" class="form-control" id="Email" value={{ email }}>
       </div>
       <div class="form-group">
-        <a class="label label-required">必須</a>
-        <label class="label-required-text" for="Password">パスワード</label>
+        <label class="label-required-text" for="Password">現在のパスワード</label>
+        <input type="password" name="check_password" class="form-control" id="check_Password">
+      </div>
+      <div class="form-group">
+        <label class="label-required-text" for="Password">新しいパスワード（変更しない場合は、現在のパスワードと同様にして下さい）</label>
         <input type="password" name="password" class="form-control" id="Password">
       </div>
       <div class="form-group">
-        <a class="label label-required">必須</a>
-        <label class="label-required-text" for="ImageFile">新しいプロフィール画像ファイル</label>
+        <label class="label-required-text" for="ImageFile">プロフィール画像 [</label>{{ user_image }}<label class="label-required-text" for="ImageFile">]</label>
         <input type="file" name="file" id="ImageFile">
       </div>
       <button type="submit" class="btn btn-primary">登録</button>
