--- a/talkapp/templates/navbar.html
+++ b/talkapp/templates/navbar.html
@@ -20,7 +20,7 @@
       {% endif %}
       <ul class="nav navbar-nav navbar-right">
         {% if user.is_authenticated %}
-        <li><a href="{% url 'talkapp:user_edit' %}">{{ user.username }} さんようこそ</a></li>
+        <li><a href="{% url 'talkapp:user_edit' %}"><img src="/static/images/{{ user.profile.image }}" width=28 height=28> {{ user.username }} さんようこそ</a></li>
         <li><a href="{% url 'talkapp:user_edit' %}">ユーザー情報更新</a></li>
         <li><a href="{% url 'talkapp:getlogout' %}">ログアウト</a></li>
         {% else %}
