--- a/talkapp/templates/talkapp/getlogin.html
+++ b/talkapp/templates/talkapp/getlogin.html
@@ -5,22 +5,25 @@
 {% endblock %}
 
 {% block content %}
-<div class="row">
-  <div class="col-md-8 col-md-offset-2">
-    <h1>ログイン</h1>
-    <form action="{% url 'talkapp:postlogin' %}" method="post">
-      <div class="form-group">
-        <label class="label-required-text" for="Email">メール</label>
-        <input type="text" name="email" style="visibility: hidden; top: -100px; left: -100px;" />
-        <input type="text" name="email" class="form-control" id="Email" placeholder="Email">
-      </div>
-      <div class="form-group">
-        <label class="label-required-text" for="Password">パスワード</label>
-        <input type="password" name="password" class="form-control" id="Password" placeholder="Password">
-      </div>
-      <button type="submit" class="btn btn-primary">ログイン</button>
+<div class="form-wrapper">
+  <h1>Sign In</h1>
+  <form action="{% url 'talkapp:postlogin' %}" method="post">
+    <div class="form-item">
+      <label for="email"></label>
+      <input type="email" name="email" required="required" placeholder="Email Address"></input>
+    </div>
+    <div class="form-item">
+      <label for="password"></label>
+      <input type="password" name="password" required="required" placeholder="Password"></input>
+    </div>
+    <div class="button-panel">
+      <input type="submit" class="button btn-primary" title="Sign In" value="Sign In"></input>
       {% csrf_token %}
-    </form>
+    </div>
+  </form>
+  <div class="form-footer">
+    <p><a href="{% url 'talkapp:user_create' %}">Create an account</a></p>
+    <p><a href="#">Forgot password?</a></p>
   </div>
 </div>
 {% endblock %}
