--- a/talkapp/templates/base.html
+++ b/talkapp/templates/base.html
@@ -13,9 +13,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
     {% load staticfiles %}
-    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}" type="text/css">
     <link rel="stylesheet" href="{% static 'css/loginstyle.css' %}" type="text/css">
-    <link rel="stylesheet" href="{% static 'css/oliginalstyle.css' %}" type="text/css">
+    <link rel="stylesheet" href="{% static 'css/originalstyle.css' %}" type="text/css">
 
   </head>
   <body>
@@ -30,7 +29,7 @@
 
     <!-- Bootstrap core JavaScript ================================================== -->
     <!-- Latest compiled and minified JavaScript -->
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
   </body>
 </html>
