--- a/talkapp/templates/navbar.html
+++ b/talkapp/templates/navbar.html
@@ -1,28 +1,55 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default ">
   <div class="container-fluid">
+  <!-- ヘッダー部分 ================ -->
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
+      <a class="navbar-brand" href="#">Bootstap</a>
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nav_target">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      {% if user.is_authenticated %}
-      {% else %}
-      <a class="navbar-brand" href="{% url 'talkapp:home' %}">ホーム</a>
-      {% endif %}
     </div>
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      {% if user.is_authenticated %}
+  <!-- 中央のナビゲーション部分 ================ -->
+    <div class="collapse navbar-collapse" id="nav_target">
       <ul class="nav navbar-nav">
-        <li><a href="{% url 'talkapp:post_index' %}">トーク画面</a></li>
+        <!-- リンクのみ -->
+        {% if user.is_authenticated %}
+        {% else %}
+        <li class="active"><a href="{% url 'talkapp:home' %}">Home</a></li>
+        {% endif %}
+          <li><a href="{% url 'talkapp:post_index' %}">List</a></li>
+        <!-- Nav3 ドロップダウン -->
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Nav3 <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">link 1</a></li>
+              <li><a href="#">link 2</a></li>
+              <li class="divider"></li>
+              <li><a href="#">link3</a></li>
+            </ul>
+          </li>
+        <!-- Nav4 ドロップダウン -->
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Nav4 <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">link 1</a></li>
+              <li><a href="#">link 2</a></li>
+              <li class="divider"></li>
+              <li><a href="#">link3</a></li>
+            </ul>
+          </li>
       </ul>
-      {% endif %}
+  <!-- 右寄せになる部分 ================ -->
       <ul class="nav navbar-nav navbar-right">
         {% if user.is_authenticated %}{% load staticfiles %}
-        <li><a href="{% url 'talkapp:user_edit' %}"><img src="{{ STATIC_URL }}images/{{ user.profile.image }}" width=28 height=28> {{ user.username }} さんようこそ</a></li>
-        <li><a href="{% url 'talkapp:user_edit' %}">ユーザー情報更新</a></li>
-        <li><a href="{% url 'talkapp:getlogout' %}">ログアウト</a></li>
+        <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><img src="{{ STATIC_URL }}images/{{ user.profile.image }}" width=24 height=24> {{ user.username }} さんようこそ<span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="{% url 'talkapp:user_edit' %}">ユーザー情報更新</a></li>
+              <li class="divider"></li>
+              <li><a href="{% url 'talkapp:getlogout' %}">ログアウト</a></li>
+            </ul>
+        </li>
         {% else %}
         <li><a href="{% url 'talkapp:getlogin' %}">ログイン</a></li>
         {% endif %}
@@ -30,3 +57,4 @@
     </div>
   </div>
 </nav>
+
