--- a/talkapp/templates/talkapp/getlogin.html
+++ b/talkapp/templates/talkapp/getlogin.html
@@ -1,12 +1,13 @@
 {% extends "base.html" %}
 
 {% block title %}
-ログイン
+サインイン
 {% endblock %}
 
 {% block content %}
 <div class="form-wrapper">
-  <h1>Sign In</h1>
+  <h1>サインイン</h1>
+  {{ message_title }}{{ message }}
   <form action="{% url 'talkapp:postlogin' %}" method="post">
     <div class="form-item">
       <label for="email"></label>
@@ -17,13 +18,13 @@
       <input type="password" name="password" required="required" placeholder="Password"></input>
     </div>
     <div class="button-panel">
-      <input type="submit" class="button btn-primary" title="Sign In" value="Sign In"></input>
+      <input type="submit" class="button btn-primary" title="Sign In" value="サインイン"></input>
       {% csrf_token %}
     </div>
   </form>
   <div class="form-footer">
-    <p><a href="{% url 'talkapp:user_create' %}">Create an account</a></p>
-    <p><a href="#">Forgot password?</a></p>
+    <u><p><a href="{% url 'talkapp:user_create' %}">新規登録</a></p></u>
+    <u><p><a href="#">パスワードを忘れた?</a></p></u>
   </div>
 </div>
 {% endblock %}
