--- a/talkapp/templates/talkapp/user_edit.html
+++ b/talkapp/templates/talkapp/user_edit.html
@@ -1,15 +1,15 @@
 {% extends "base.html" %}
 
 {% block title %}
-登録情報修正
+ユーザー情報更新
 {% endblock %}
 
 {% block content %}
-  {{ message_title }}{{ message }}
 <div class="row">
   <div class="col-md-8 col-md-offset-2">
-    <h1>登録情報修正</h1>
-    <p><strong>修正する箇所のみ入力してください</strong></p>
+    <h1>ユーザー情報更新</h1>
+    <p><h5>修正する項目を入力してください。</h5></p>
+    <h6 class="text-danger">{{ message_title }}{{ message }}</h6>
     <form action="{% url 'talkapp:user_update' %}" method="post" enctype="multipart/form-data">
       <div class="form-group">
         <label class="label-required-text" for="Name">名前</label>
