--- a/talkapp/templates/talkapp/getlogin.html
+++ b/talkapp/templates/talkapp/getlogin.html
@@ -5,7 +5,8 @@ Sign in
 {% endblock %}
 
 {% block content %}
-<div class="form-wrapper">
+<div class="col-md-3 col-xs-1"></div>
+<div class="form-wrapper col-md-6 col-xs-10 panel panel-default">
   <h1>Sign in</h1>
   {{ message_title }}{{ message }}
   <form action="{% url 'talkapp:postlogin' %}" method="post">
