--- a/talkapp/static/css/loginstyle.css
+++ b/talkapp/static/css/loginstyle.css
@@ -46,7 +46,7 @@ form {
   border-bottom: 2px solid #e9e9e9;
   color: #666;
   font-family: 'Open Sans', sans-serif;
-  font-size: 1em;
+  font-size: 16px;
   height: 50px;
   transition: border-color 0.3s;
   width: 100%;
