ホーム画面表示変更

--- a/talkapp/templates/talkapp/home.html
+++ b/talkapp/templates/talkapp/home.html
@@ -6,8 +6,7 @@
 
 {% block content %}
 <div class="jumbotron">
-  <h1>グループ交流アプリ</h1>
-  <p>本アプリケーションは◯◯グループのメンバー間で情報共有を行うためのWebアプリケーションです。未登録の方は下記のボタンを押して登録をお願いします。</p>
-  <a class="btn btn-primary" href="{% url 'talkapp:user_create' %}">登録画面へ</a>
+  <h1>ホーム画面</h1>
+  <p>最初の画面になります。</p>
 </div>
 {% endblock %}
