--- a/talkapp/templates/talkapp/post_index.html
+++ b/talkapp/templates/talkapp/post_index.html
@@ -7,12 +7,14 @@
 {% block content %}
 <div class="row">
   <div class="col-md-8 col-md-offset-2 well">
+    {% if user.is_authenticated %}
     <form action="{% url 'talkapp:post_delete_all' %}" method="post">
       <div class="form-group">
         <button type="submit" class="btn btn-denger btn-xs pull-right">削除</button>
         {% csrf_token %}
       </div>
     </form>
+    {% endif %}
 
     {% for post in posts %}
     <div class="media">
@@ -28,7 +30,9 @@
     </div>
     {% endfor %}
 
+    {% if user.is_authenticated %}
     <a href="{% url 'talkapp:post_create' %}" class="btn btn-primary btn-space-30 btn-block">メッセージ作成</a>
+    {% endif %}
   </div>
 </div>
 {% endblock %}
