--- a/talkapp/static/css/originalstyle.css
+++ b/talkapp/static/css/originalstyle.css
@@ -4,6 +4,14 @@ body {
     background-color: lightgreen;
 }
 
+.btn-space-10 {
+    margin-top: 10px;
+}
+
+.btn-space-20 {
+    margin-top: 20px;
+}
+
 .btn-space-30 {
     margin-top: 30px;
 }
