--- a/talkapp/templates/talkapp/post_index.html
+++ b/talkapp/templates/talkapp/post_index.html
@@ -6,16 +6,7 @@
 
 {% block content %}
 <div class="row">
-  <div class="col-md-8 col-md-offset-2 well">
-    {% if user.is_authenticated %}
-    <form action="{% url 'talkapp:post_delete_all' %}" method="post">
-      <div class="form-group">
-        <button type="submit" class="btn btn-denger btn-xs pull-right">削除</button>
-        {% csrf_token %}
-      </div>
-    </form>
-    {% endif %}
-
+  <div class="col-md-8 col-md-offset-2 col-xs-10 col-xs-offset-1 well">
     {% for post in posts %}
     <div class="media">
       <div class="media-left">
@@ -32,6 +23,8 @@
 
     {% if user.is_authenticated %}
     <a href="{% url 'talkapp:post_create' %}" class="btn btn-primary btn-space-30 btn-block">メッセージ作成</a>
+    <div></div>
+    <a href="{% url 'talkapp:post_delete_all' %}" class="btn btn-danger btn-space-10 btn-block">全削除</a>
     {% endif %}
   </div>
 </div>
