--- a/talkapp/templates/talkapp/user_create.html
+++ b/talkapp/templates/talkapp/user_create.html
@@ -1,38 +1,36 @@
 {% extends "base.html" %}
 
 {% block title %}
-サインアップ
+Sign Up
 {% endblock %}
 
 {% block content %}
-<div class="row">
-  <div class="col-md-8 col-md-offset-2">
-    <h1>サインアップ</h1>
-    <h6 class="text-danger">{{ message_title }}{{ message }}</h6>
-    <form action="{% url 'talkapp:user_store' %}" method="post" enctype="multipart/form-data">
-      <div class="form-group">
-        <a class="label label-required">必須</a>
-        <label class="label-required-text" for="Name">名前</label>
-        <input type="text" name="name" class="form-control" id="Name" placeholder="Name" value={{ username }}>
-      </div>
-      <div class="form-group">
-        <a class="label label-required">必須</a>
-        <label class="label-required-text" for="Email">メール</label>
-        <input type="text" name="email" style="visibility: hidden; top: -100px; left: -100px;" />
-        <input type="text" name="email" class="form-control" id="Email" placeholder="Email" value={{ email }}>
-      </div>
-      <div class="form-group">
-        <a class="label label-required">必須</a>
-        <label class="label-required-text" for="Password">パスワード</label>
-        <input type="password" name="password" class="form-control" id="Password" placeholder="Password" value={{ password }}>
-      </div>
-      <div class="form-group">
-        <label class="label-required-text" for="ImageFile">プロフィール画像ファイル</label>
-        <input type="file" name="file" id="ImageFile">
-      </div>
-      <button type="submit" class="btn btn-primary">登録</button>
+<div class="col-md-3 col-xs-0"></div>
+<div class="form-wrapper col-md-6 col-xs-12 panel panel-default">
+  <h1>Sign Up</h1>
+  {{ message_title }}{{ message }}
+  <form action="{% url 'talkapp:user_store' %}" method="post">
+    <div class="form-item">
+      <label for="Name"></label>
+      <input type="text" name="name" required="required" placeholder="Name"></input>
+    </div>
+    <div class="form-item">
+      <label for="email"></label>
+      <input type="email" name="email" required="required" placeholder="Email Address"></input>
+    </div>
+    <div class="form-item">
+      <label for="password"></label>
+      <input type="password" name="password" required="required" placeholder="Password"></input>
+    </div>
+    <div class="form-item">
+      <label for="ImageFile" filetype="filetype">Photo Image</label>
+      <input type="file" name="file" id="ImageFile" filetype="filetype">
+    </div>
+    <div class="button-panel">
+      <input type="submit" class="button btn-primary" title="Sign Up" value="Sign Up"></input>
       {% csrf_token %}
-    </form>
-  </div>
+    </div>
+  </form>
+  <div class="form-footer"></div>
 </div>
 {% endblock %}
