--- a/talkapp/templates/talkapp/user_create.html
+++ b/talkapp/templates/talkapp/user_create.html
@@ -12,20 +12,22 @@ Sign Up
   <form action="{% url 'talkapp:user_store' %}" method="post">
     <div class="form-item">
       <label for="Name"></label>
-      <input type="text" name="name" required="required" placeholder="Name"></input>
+      <input type="text" name="name" required="required" placeholder="Name" autocomplete="off"></input>
     </div>
     <div class="form-item">
       <label for="email"></label>
-      <input type="email" name="email" required="required" placeholder="Email Address"></input>
+      <input type="email" name="email" required="required" placeholder="Email Address" autocomplete="off"></input>
     </div>
     <div class="form-item">
       <label for="password"></label>
       <input type="password" name="password" required="required" placeholder="Password"></input>
     </div>
+    {% if user_agent.is_pc %}
     <div class="form-item">
       <label for="ImageFile" filetype="filetype">Photo Image</label>
       <input type="file" name="file" id="ImageFile" filetype="filetype">
     </div>
+    {% endif %}
     <div class="button-panel">
       <input type="submit" class="button btn-primary" title="Sign Up" value="Sign Up"></input>
       {% csrf_token %}
