--- a/talkapp/templates/talkapp/post_create.html
+++ b/talkapp/templates/talkapp/post_create.html
@@ -8,7 +8,7 @@
 <div class="row">
   <div class="col-md-8 col-md-offset-2">
     <h1>メッセージ作成</h1>
-    <form action="{% url 'talkapp:post_store' %}" method="post">
+    <form action="{% url 'talkapp:post_store' %}" method="post" enctype="multipart/form-data">
       <div class="form-group">
         <label for="Message">メッセージ</label>
         <textarea class="form-control" name="message" id="Message" rows="5" placeholder="Your Post"></textarea>
