ログイン修正 エラー表示変更

--- a/talkapp/static/css/loginstyle.css
+++ b/talkapp/static/css/loginstyle.css
@@ -134,3 +134,10 @@ form {
 ::-webkit-input-placeholder {
     color: #ccc;
 }
+
+.login-error {
+  text-align: center;
+  color: #ff0000;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 12px;
+}
