--- a/talkapp/templates/talkapp/getlogin.html
+++ b/talkapp/templates/talkapp/getlogin.html
@@ -8,7 +8,7 @@ Sign in
 <div class="col-md-3 col-xs-0"></div>
 <div class="form-wrapper col-md-6 col-xs-12 panel panel-default">
   <h1>Sign in</h1>
-  {{ message_title }}{{ message }}
+  <div class="login-error">{{ message_title }}{{ message }}</div>
   <form action="{% url 'talkapp:postlogin' %}" method="post" enctype="multipart/form-data">
     <div class="form-item">
       <label for="email"></label>
